Added new README

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-This is the new "Gardens" game from Crafted Fun.
+This Git repository contains what you need in order to get started
+with a basic application for Crafted Fun.
 
-Some design documents for this application are under "doc".
+You can read more about how to start applications for Crafted Fun at
+
+    https://craftedfun.wikispaces.com/Starting+an+app
